Archive2/dd/f50b4a91e50df5/output
main.cpp:7:5: error: static_assert failed ""
    static_assert( std::is_constructible<A>{}, "" );   
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
g++: fatal error: no input files
compilation terminated.
